Actualizacion de color de fondo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar-content">
             <div class="logo-container">
                 <div class="logo">
-                    <a href="index.html"><img src="images/JAYSTORE.png" alt="Jay Store"></a>
+                    <a href="index.html"><img src="images/logo_jaystore.jpg" alt="Jay Store"></a>
                 </div>
             </div>
             <div class="menu-icon">
