--- a/index.html
+++ b/index.html
@@ -1,33 +1,121 @@
-¡<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jay Store</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=DIN+2014&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nixie+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <nav class="navbar">
-        <div class="navbar-content">
             <div class="logo-container">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logo_jaystore.jpg" alt="Jay Store"></a>
-                </div>
+            <a href="index.html"><img src="images/logo_jaystore.png" alt="Jay Store"></a>
             </div>
-            <div class="menu-icon">
-                <i class="bi bi-list" id="menu-toggle"></i>
+            <div class="menu-container">
+                <ul id="MenuItems">
+                    <li><a href="caballero.html"><span>Catálogo caballero</span></a></li>
+                    <li><a href="dama.html"><span>Catálogo dama</span></a></li>
+                    <li><a href="contacto.html"><span>Contacto</span></a></li>
+                </ul>
+            </div>
+    </nav>
+
+    <div class="banner">
+        <img src="images/banners/banner1.jpg" alt="Jay Store">
+    </div>
+
+    <div class="Destacados">
+        <h1><hr>Destacados para caballero</h1>
+        <div class="collage">
+            <div class="producto">
+                <a href="caballero.html#reloj1"><img src="images/caballero/c1.jpeg" alt="Reloj 1"></a>
+                <h3 class="nombre-reloj">Casio MTP-VC01D-5E</h3>
+                <p class="precio-reloj">MX$ 1000</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj2"><img src="images/caballero/c2.jpeg" alt="Reloj 2"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 2</h3>
+                <p class="precio-reloj">MX$ YYYY</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj3"><img src="images/caballero/c3.jpeg" alt="Reloj 3"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 3</h3>
+                <p class="precio-reloj">MX$ ZZZZ</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj4"><img src="images/caballero/c4.jpeg" alt="Reloj 4"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 4</h3>
+                <p class="precio-reloj">MX$ WWWW</p>
+                <button class="ordenar-reloj">Ordenar</button>
             </div>
         </div>
-        <ul id="MenuItems">
-            <li><a href="index.html"><i class="bi bi-house"></i> <span>Inicio</span></a></li>
-            <li><a href="Decoraciones.html"><i class="bi bi-balloon"></i> <span>Catalogo caballero</span></a></li>
-            <li><a href="informacion.html"><i class="bi bi-info"></i> <span>Catalogo dama</span></a></li>
-            <li><a href="contacto.html"><i class="bi bi-envelope"></i> <span>Contacto</span></a></li>
-        </ul>
-    </nav>
+    </div>
+
+    <div class="Destacados">
+        <h1><hr>Destacados para dama</h1>
+        <div class="collage">
+            <div class="producto">
+                <a href="caballero.html#reloj1"><img src="images/caballero/c1.jpeg" alt="Reloj 1"></a>
+                <h3 class="nombre-reloj">Casio MTP-VC01D-5E</h3>
+                <p class="precio-reloj">MX$ 1000</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj2"><img src="images/caballero/c2.jpeg" alt="Reloj 2"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 2</h3>
+                <p class="precio-reloj">MX$ YYYY</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj3"><img src="images/caballero/c3.jpeg" alt="Reloj 3"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 3</h3>
+                <p class="precio-reloj">MX$ ZZZZ</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+            <div class="producto">
+                <a href="caballero.html#reloj4"><img src="images/caballero/c4.jpeg" alt="Reloj 4"></a>
+                <h3 class="nombre-reloj">Nombre del Reloj 4</h3>
+                <p class="precio-reloj">MX$ WWWW</p>
+                <button class="ordenar-reloj">Ordenar</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="footer_links">
+                <h4>Enlaces útiles</h4>
+                <ul>
+                    <li><a href="politica-devolucion.html">Política de devolución</a></li>
+                    <li><a href="politica-privacidad.html">Política de privacidad</a></li>
+                    <li><a href="terminos-condiciones.html">Términos y condiciones</a></li>
+                </ul>
+            </div>
+            <div class="footer_links">
+                <h4>Síguenos en nuestras redes sociales</h4>
+                <ul>
+                    <li><a class="bi bi-facebook"></a></li>
+                    <li><a class="bi bi-tiktok"></a></li>
+                    <li><a class="bi bi-instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <p>Copyright 2025 by Ge0sh</p>
+    </div>
 
 <script src="js.js"></script> 
 </body>
