Vista de celular actualizada, primer implementacion del catalogo de hombre

--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,8 @@
     <div class="contacto">
             <div>
                 <h1 data-aos="fade" class="contacto"><i></i> Contacto</h1>
-                <p data-aos="fade" class="info">Si tienes alguna duda, sugerencia, quieres cotizar o contratar un evento no dudes en contactarnos.</p>
+                <p data-aos="fade" class="info">Los mejores relojes, completamente originales, manejamos productos en stock y por pedido, si deseas un producto que no tenemos en stock, puedes contactarnos a través de nuestras redes sociales o por WhatsApp. Hacemos envios nacionales y entregas en persona en Ameca, Jalisco.</p>
+                </p>
                 <p></p>
             </div>
     </div>
@@ -45,15 +46,13 @@
         <div>
             <div>
                 <div class="icon_redes">
-                    <a data-aos="fade"class="bi bi-facebook" href="https://www.facebook.com/yajairaa.evangelistaa.9"></a>
+                    <a data-aos="fade"class="bi bi-facebook" href="https://www.facebook.com/jaykicks15/"></a>
                     <p data-aos="fade">JayStore</p>
-                    <a data-aos="fade" class="bi bi-tiktok"></a>
+                    <a data-aos="fade" class="bi bi-tiktok" href="https://www.tiktok.com/@jaystore15"></a>
                     <p data-aos="fade">JayStore</p>
                     <a data-aos="fade" class="bi bi-whatsapp" onclick="enviarMensajeWhatsApp()"></a>
                     <p data-aos="fade">+5213751118891</p>
-                    <a data-aos="fade" class="bi bi-envelope"></a>
-                    <p data-aos="fade">JayStore@gmail.com</p>
-                    <a data-aos="fade" class="bi bi-instagram" href="https://www.instagram.com/decoracionesEvangelista Decor/"></a>
+                    <a data-aos="fade" class="bi bi-instagram" href="https://www.instagram.com/jaystore2015"></a>
                     <p data-aos="fade">JayStore</p>
                 </div>
             </div>
@@ -72,6 +71,7 @@
 
 
     <div class="footer">
+        <div class="container">
             <div class="footer_links">
                 <h4>Enlaces útiles</h4>
                 <ul>
@@ -83,11 +83,12 @@
             <div class="footer_links">
                 <h4>Síguenos en nuestras redes sociales</h4>
                 <ul>
-                    <li><a class="bi bi-facebook"></a></li>
-                    <li><a class="bi bi-tiktok"></a></li>
-                    <li><a class="bi bi-instagram"></a></li>
+                    <li><a class="bi bi-facebook" href="https://www.facebook.com/jaykicks15/"></a></li>
+                    <li><a class="bi bi-tiktok" href="https://www.tiktok.com/@jaystore15"></a></li>
+                    <li><a class="bi bi-instagram" href="https://www.instagram.com/jaystore2015"></a></li>
                 </ul>
             </div>
+        </div>
         <hr>
         <p>Copyright 2025 by Ge0sh</p>
     </div>
