--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nixie+One&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -38,26 +36,34 @@
         <h1><hr>Destacados para caballero</h1>
         <div class="collage">
             <div class="producto">
-                <a href="caballero.html#reloj1"><img src="images/caballero/c1.jpeg" alt="Reloj 1"></a>
+                <div class="imagen-placeholder">
+                    <a href="caballero.html#reloj1"><img src="images/caballero/c1.jpeg" alt="Reloj 1" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
                 <h3 class="nombre-reloj">Casio MTP-VC01D-5E</h3>
-                <p class="precio-reloj">MX$ 1000</p>
+                <p class="precio-reloj">MX$ XXXX</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj2"><img src="images/caballero/c2.jpeg" alt="Reloj 2"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 2</h3>
-                <p class="precio-reloj">MX$ YYYY</p>
+                <div class="imagen-placeholder">
+                    <a href="caballero.html#reloj2"><img src="images/caballero/c2.jpeg" alt="Reloj 2" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Casio MTP-V002G-7B2</h3>
+                <p class="precio-reloj">MX$<ctrl3348></p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj3"><img src="images/caballero/c3.jpeg" alt="Reloj 3"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 3</h3>
+                <div class="imagen-placeholder">
+                    <a href="caballero.html#reloj3"><img src="images/caballero/c3.jpeg" alt="Reloj 3" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Casio LTP-VT01D-7BUDF</h3>
                 <p class="precio-reloj">MX$ ZZZZ</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj4"><img src="images/caballero/c4.jpeg" alt="Reloj 4"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 4</h3>
+                <div class="imagen-placeholder">
+                    <a href="caballero.html#reloj4"><img src="images/caballero/c4.jpeg" alt="Reloj 4" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Casio MTP-V005l-1B</h3>
                 <p class="precio-reloj">MX$ WWWW</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
@@ -68,31 +74,40 @@
         <h1><hr>Destacados para dama</h1>
         <div class="collage">
             <div class="producto">
-                <a href="caballero.html#reloj1"><img src="images/caballero/c1.jpeg" alt="Reloj 1"></a>
-                <h3 class="nombre-reloj">Casio MTP-VC01D-5E</h3>
-                <p class="precio-reloj">MX$ 1000</p>
+                <div class="imagen-placeholder">
+                    <a href="dama.html#reloj1"><img src="images/dama/d1.jpeg" alt="Reloj 1" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Nombre de reloj</h3>
+                <p class="precio-reloj">MX$ XXXX</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj2"><img src="images/caballero/c2.jpeg" alt="Reloj 2"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 2</h3>
+                <div class="imagen-placeholder">
+                    <a href="dama.html#reloj2"><img src="images/dama/d2.jpeg" alt="Reloj 2" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Nombre de reloj</h3>
                 <p class="precio-reloj">MX$ YYYY</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj3"><img src="images/caballero/c3.jpeg" alt="Reloj 3"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 3</h3>
+                <div class="imagen-placeholder">
+                    <a href="dama.html#reloj3"><img src="images/dama/d3.jpeg" alt="Reloj 3" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Nombre de reloj</h3>
                 <p class="precio-reloj">MX$ ZZZZ</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
             <div class="producto">
-                <a href="caballero.html#reloj4"><img src="images/caballero/c4.jpeg" alt="Reloj 4"></a>
-                <h3 class="nombre-reloj">Nombre del Reloj 4</h3>
+                <div class="imagen-placeholder">
+                    <a href="dama.html#reloj4"><img src="images/dama/d4.jpeg" alt="Reloj 4" class="reloj-imagen" onerror="this.style.display='none'"></a>
+                </div>
+                <h3 class="nombre-reloj">Nombre de reloj</h3>
                 <p class="precio-reloj">MX$ WWWW</p>
                 <button class="ordenar-reloj">Ordenar</button>
             </div>
         </div>
     </div>
+
 
     <div class="footer">
         <div class="container">
@@ -107,9 +122,9 @@
             <div class="footer_links">
                 <h4>Síguenos en nuestras redes sociales</h4>
                 <ul>
-                    <li><a class="bi bi-facebook"></a></li>
-                    <li><a class="bi bi-tiktok"></a></li>
-                    <li><a class="bi bi-instagram"></a></li>
+                    <li><a class="bi bi-facebook" href="https://www.facebook.com/jaykicks15/"></a></li>
+                    <li><a class="bi bi-tiktok" href="https://www.tiktok.com/@jaystore15"></a></li>
+                    <li><a class="bi bi-instagram" href="https://www.instagram.com/jaystore2015"></a></li>
                 </ul>
             </div>
         </div>
