destacados hombre, funcionalidad a todos los botones correctamente

--- a/caballero html/c16.html
+++ b/caballero html/c16.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c16.jpeg" alt="Casio MTP-VT01D-7B">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c16.jpeg" alt="Casio MTP-VT01D-7B">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-VT01D-7B</h1>
         <p class="precio">1190</p>
         <p class="color"><strong>Color:</strong> Blanco</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-VT01D-7B%20que%20cuesta%201190%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c16.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-VT01D-7B%20que%20cuesta%201190%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c16.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
