--- a/caballero html/c35.html
+++ b/caballero html/c35.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c35.jpeg" alt="Casio MDV106">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c35.jpeg" alt="Casio MDV106">
             </div>
     <div class="producto-detalles">
         <h1>Casio MDV106</h1>
         <p class="precio">1600</p>
         <p class="color"><strong>Color:</strong> Negro</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MDV106%20que%20cuesta%201600%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c35.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MDV106%20que%20cuesta%201600%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c35.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
