--- a/caballero html/c57.html
+++ b/caballero html/c57.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c57.jpeg" alt="Casio A158">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c57.jpeg" alt="Casio A158">
             </div>
     <div class="producto-detalles">
         <h1>Casio A158</h1>
         <p class="precio">740</p>
         <p class="color"><strong>Color:</strong> Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio A158%20que%20cuesta%20740%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c57.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio A158%20que%20cuesta%20740%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c57.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
