--- a/caballero html/c71.html
+++ b/caballero html/c71.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c71.jpeg" alt="Casio  MTP-VD01-5EVUDF">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c71.jpeg" alt="Casio  MTP-VD01-5EVUDF">
             </div>
     <div class="producto-detalles">
         <h1>Casio  MTP-VD01-5EVUDF</h1>
         <p class="precio">1150</p>
         <p class="color"><strong>Color:</strong> Negro, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio  MTP-VD01-5EVUDF%20que%20cuesta%201150%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c71.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio  MTP-VD01-5EVUDF%20que%20cuesta%201150%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c71.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
