--- a/caballero html/c12.html
+++ b/caballero html/c12.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c12.jpeg" alt="Casio MTP-1335D-2A2VDF">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c12.jpeg" alt="Casio MTP-1335D-2A2VDF">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-1335D-2A2VDF</h1>
         <p class="precio">1299</p>
         <p class="color"><strong>Color:</strong> Negro, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-1335D-2A2VDF%20que%20cuesta%201299%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c12.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-1335D-2A2VDF%20que%20cuesta%201299%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c12.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
