--- a/caballero html/c3.html
+++ b/caballero html/c3.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c3.jpeg" alt="Casio LTP-VT01D-7BUDF">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c3.jpeg" alt="Casio LTP-VT01D-7BUDF">
             </div>
     <div class="producto-detalles">
         <h1>Casio LTP-VT01D-7BUDF</h1>
         <p class="precio">1100</p>
         <p class="color"><strong>Color:</strong> Blanco </p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio LTP-VT01D-7BUDF%20que%20cuesta%201100%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c3.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio LTP-VT01D-7BUDF%20que%20cuesta%201100%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c3.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
