--- a/caballero html/c33.html
+++ b/caballero html/c33.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c33.jpeg" alt="Casio W735">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c33.jpeg" alt="Casio W735">
             </div>
     <div class="producto-detalles">
         <h1>Casio W735</h1>
         <p class="precio">890</p>
         <p class="color"><strong>Color:</strong> Negro</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio W735%20que%20cuesta%20890%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c33.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio W735%20que%20cuesta%20890%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c33.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
