--- a/caballero html/c4.html
+++ b/caballero html/c4.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c4.jpeg" alt="Casio MTP-V0051-1B">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c4.jpeg" alt="Casio MTP-V0051-1B">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-V0051-1B</h1>
         <p class="precio">1000</p>
         <p class="color"><strong>Color:</strong> Plata, Negro</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-V0051-1B%20que%20cuesta%201000%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c4.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-V0051-1B%20que%20cuesta%201000%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c4.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
