--- a/caballero html/c42.html
+++ b/caballero html/c42.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c42.jpeg" alt="Casio MTP-1215">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c42.jpeg" alt="Casio MTP-1215">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-1215</h1>
         <p class="precio">920</p>
         <p class="color"><strong>Color:</strong> Blanco, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-1215%20que%20cuesta%20920%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c42.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-1215%20que%20cuesta%20920%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c42.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
