--- a/caballero html/c48.html
+++ b/caballero html/c48.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c48.jpeg" alt="Casio AQ230">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c48.jpeg" alt="Casio AQ230">
             </div>
     <div class="producto-detalles">
         <h1>Casio AQ230</h1>
         <p class="precio">1440</p>
         <p class="color"><strong>Color:</strong> Dorado</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio AQ230%20que%20cuesta%201440%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c48.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio AQ230%20que%20cuesta%201440%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c48.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
