--- a/caballero html/c67.html
+++ b/caballero html/c67.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c67.jpeg" alt="Casio MTP-V006">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c67.jpeg" alt="Casio MTP-V006">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-V006</h1>
         <p class="precio">990</p>
         <p class="color"><strong>Color:</strong> Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-V006%20que%20cuesta%20990%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c67.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-V006%20que%20cuesta%20990%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c67.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
