--- a/caballero html/c70.html
+++ b/caballero html/c70.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c70.jpeg" alt="Casio MRW200">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c70.jpeg" alt="Casio MRW200">
             </div>
     <div class="producto-detalles">
         <h1>Casio MRW200</h1>
         <p class="precio">999</p>
         <p class="color"><strong>Color:</strong> Negro, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MRW200%20que%20cuesta%20999%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c70.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MRW200%20que%20cuesta%20999%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c70.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
