--- a/caballero html/c75.html
+++ b/caballero html/c75.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c75.jpeg" alt="Casio MTP-B145D-7BV">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c75.jpeg" alt="Casio MTP-B145D-7BV">
             </div>
     <div class="producto-detalles">
         <h1>Casio MTP-B145D-7BV</h1>
         <p class="precio">1150</p>
         <p class="color"><strong>Color:</strong> Blanco, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-B145D-7BV%20que%20cuesta%201150%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c75.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio MTP-B145D-7BV%20que%20cuesta%201150%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c75.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
