--- a/caballero html/c9.html
+++ b/caballero html/c9.html
@@ -177,13 +177,13 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="../images/caballero/c9.jpeg" alt="Casio AMW-880">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c9.jpeg" alt="Casio AMW-880">
             </div>
     <div class="producto-detalles">
         <h1>Casio AMW-880</h1>
         <p class="precio">2099</p>
         <p class="color"><strong>Color:</strong> Amarillo, Plata</p>
-        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio AMW-880%20que%20cuesta%202099%20MXN.%20%0Ahttps://tu-servidor.com/images/caballero/c9.jpeg" target="_blank">
+        <a class="btn-whatsapp" href="https://wa.me/5213751118891?text=Me%20interesa%20el%20reloj%20Casio AMW-880%20que%20cuesta%202099%20MXN.%20%0Ahttps://raw.githubusercontent.com/age0sh/website-jaystore/main/images/caballero/c9.jpeg" target="_blank">
             Pedir por WhatsApp
         </a>
     </div>
