Finalizacion de la vista de mujer, asi como la publicacion de las fotos a github

--- a/caballero.html
+++ b/caballero.html
@@ -97,7 +97,7 @@
 </div>
 <div class="producto">
 <div class="imagen-placeholder">
-<a href="caballero html/c8.html"><img alt="Reloj " class="reloj-imagen" onerror="this.style.display='none'" src="images/caballero/c8.jpeg"/></a>
+<a href="caballero html/c8.html"><img alt="Reloj 8" class="reloj-imagen" onerror="this.style.display='none'" src="images/caballero/c8.jpeg"/></a>
 </div>
 <h3 class="nombre-reloj">Casio AMW-880</h3>
 <p class="precio-reloj">MX$ 2099</p>
