--- a/dama.html
+++ b/dama.html
@@ -238,7 +238,7 @@
 </div>
 <div class="producto">
 <div class="imagen-placeholder">
-<a href="dama html/d24.html"><img alt="Reloj 24" class="reloj-imagen" onerror="this.style.display='none'" src="images/dama/d24.jpeg"/></a>
+<a href="dama html/d24.html"><img alt="Reloj 24" class="reloj-imagen" onerror="this.style.display='none'" src="images/dama/d24.jpg"/></a>
 </div>
 <h3 class="nombre-reloj">Casio LTP-VT01</h3>
 <p class="precio-reloj">MX$ 950</p>
