solucion de error de d24

--- a/dama html/d24.html
+++ b/dama html/d24.html
@@ -178,7 +178,7 @@
     <main>
         <div class="producto-container">
             <div class="producto-img">
-                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/dama/d24.jpeg" alt="Casio LTP-VT01">
+                <img src="https://raw.githubusercontent.com/age0sh/website-jaystore/main/images/dama/d24.jpg" alt="Casio LTP-VT01">
             </div>
     <div class="producto-detalles">
         <h1>Casio LTP-VT01</h1>
